--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>IT-Термины</title>
+    <link rel="stylesheet" href="../src/styles.css" />
+</head>
+<body>
+    <div id="root"></div>
+    <script src="../src/index.js" type="module"></script>
+</body>
+</html>
